Fixed issue where notifications where not visible with a hidden toolbar.

--- a/src-gwt/org/opencms/gwt/client/ui/css/toolbar.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/toolbar.css
@@ -7,7 +7,7 @@
 		overflow-y: scroll;
 	}
 }
-.toolbarHide .toolbar{
+.toolbarHide .toolbar .toolbarBackground{
 	display: none;
 }
 
